{
    "name": "ControlesPlayer2",
    "maps": [
        {
            "name": "Player2",
            "id": "322f51bb-7c54-4fd3-ba8a-25183f889a6f",
            "actions": [
                {
                    "name": "movimentacao",
                    "type": "Value",
                    "id": "ac8ba97a-861e-4491-8d57-63a2cb95c73f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pulo",
                    "type": "Button",
                    "id": "e351cd66-573a-4800-adb1-e125c18499de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "movimento",
                    "id": "e6014b66-9401-44cb-94fa-c41e2efbafee",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movimentacao",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fc288e3b-1c76-44fe-a8ad-731535792f25",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movimentacao",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a3dfb51a-103f-4763-9b94-4ff717c31d29",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movimentacao",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "12465cd6-e354-4a45-aac8-0940aba2c525",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movimentacao",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c9e7f99c-a445-4e30-b9d6-a91c42d2ef10",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movimentacao",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c2aba7ca-3205-4082-bcf8-ab7333216d98",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pulo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}